--- a/README.html
+++ b/README.html
@@ -441,11 +441,14 @@ stands</p></li>
 <li><p><code>sp_growth.boot.RData</code>: confidence itervals of 95th
 percetile of growth rates of species across all stands</p></li>
 <li><p><code>stan_mort_mod_output_nc_mod_early_cov_matrix.RData</code>:
-stan model output for species across early developmental stands</p></li>
+stan model output for species across early developmental stands (too
+heavy)</p></li>
 <li><p><code>stan_mort_mod_output_nc_mod_late_cov_matrix.RData</code>:
-stan model output for species across latedevelopmental stands</p></li>
+stan model output for species across latedevelopmental stands (too
+heavy)</p></li>
 <li><p><code>stan_mort_mod_output_nc_mod2_cov_matrix.RData</code>: stan
-model output for species across all developmental stands</p></li>
+model output for species across all developmental stands (too
+heavy)</p></li>
 <li><p><code>stand_dev_us.rds</code>: plot-level information of
 development status across all stands</p></li>
 <li><p><code>temperate.all.rates.RData</code>: all estimated demographic
