--- a/README.html
+++ b/README.html
@@ -353,10 +353,10 @@ display: none;
 
 
 <hr />
-<div id="this-repository-contains-all-files-related-to-the-analyses-performed-for-the-manuscript-disturbance-constrains-the-growth-survival-trade-off-across-temperate-tree-species-lead-by-kauane-m.-bordin-and-co-authors." class="section level3">
+<div id="this-repository-contains-all-files-related-to-the-analyses-performed-for-the-manuscript-disturbance-constrains-the-growth-survival-trade-off-across-temperate-tree-species-led-by-kauane-m.-bordin-and-co-authors." class="section level3">
 <h3>This repository contains all files related to the analyses performed
 for the manuscript “Disturbance constrains the growth-survival trade-off
-across temperate tree species”, lead by Kauane M. Bordin and
+across temperate tree species”, led by Kauane M. Bordin and
 co-authors.</h3>
 <div id="content-of-the-repository" class="section level4">
 <h4><em>Content of the repository:</em></h4>
