--- a/README.html
+++ b/README.html
@@ -445,14 +445,14 @@ stands</p></li>
 <li><p><code>sp_growth.boot.RData</code>: confidence itervals of 95th
 percetile of growth rates of species across all stands</p></li>
 <li><p><code>stan_mort_mod_output_nc_mod_early_cov_matrix.RData</code>:
-stan model output for species across early developmental stands (very
-heavy - available upon request)</p></li>
+stan model output for species across early developmental stands (careful
+- very heavy)</p></li>
 <li><p><code>stan_mort_mod_output_nc_mod_late_cov_matrix.RData</code>:
-stan model output for species across latedevelopmental stands (very
-heavy - available upon request)</p></li>
+stan model output for species across latedevelopmental stands (careful -
+very heavy)</p></li>
 <li><p><code>stan_mort_mod_output_nc_mod2_cov_matrix.RData</code>: stan
-model output for species across all developmental stands (very heavy -
-available upon request)</p></li>
+model output for species across all developmental stands (careful - very
+heavy)</p></li>
 <li><p><code>stand_dev_us.rds</code>: plot-level information of
 development status across all stands</p></li>
 <li><p><code>temperate.all.rates.RData</code>: all estimated demographic
@@ -475,8 +475,8 @@ the manuscript</p>
 dataset (see below)</p>
 <table>
 <colgroup>
-<col width="30%" />
-<col width="69%" />
+<col width="31%" />
+<col width="68%" />
 </colgroup>
 <thead>
 <tr class="header">
